--- a/shop/src/app/components/products-list/products-list.html
+++ b/shop/src/app/components/products-list/products-list.html
@@ -1,1 +1,22 @@
-<p>products-list works!</p>
+<h2>Products List</h2>
+
+<table border="1" width="100%">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Category</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let product of products">
+      <td>{{ product.id }}</td>
+      <td>{{ product.name }}</td>
+      <td>{{ product.description }}</td>
+      <td>${{ product.price }}</td>
+      <td>{{ getCategoryNameById(product.categoryId) }}</td>
+    </tr>
+  </tbody>
+</table>
